tests/rosetta/transpiler/erl/fivenum-2.error
exit status 127
escript: exception error: no function clause matching 
                 lists:sublist([36,40,7,39,41,15],1,2.5) (lists.erl, line 574)
  in function  main:fivenum/1 (/workspace/mochi/tests/rosetta/transpiler/erl/fivenum-2.erl, line 91)
  in call from main:main/1 (/workspace/mochi/tests/rosetta/transpiler/erl/fivenum-2.erl, line 108)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1 
  in call from init:do_boot/3 
